src/objects/KS_Encuesta__c.object
<CustomObject>
    <description>KAIZENSTEP. DESACTIVADO. Propuesta de encuesta, probablemente BORRAR</description>
    <fields>
        <fullName>Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Encuestas</relationshipLabel>
        <relationshipName>Encuestas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cometarios__c</fullName>
        <label>Cometarios</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Encuestas</relationshipLabel>
        <relationshipName>Encuestas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Pregunta_1__c</fullName>
        <label>Pregunta 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opción 1</fullName>
                </value>
                <value>
                    <fullName>Opción 2</fullName>
                </value>
                <value>
                    <fullName>Opción 3</fullName>
                </value>
                <value>
                    <fullName>Opción 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Pregunta_2_opci_n_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pregunta 2 opción A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Pregunta_2_opcion_b__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pregunta 2 opcion b</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pregunta_3__c</fullName>
        <label>Pregunta 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opción Preg3-A</fullName>
                </value>
                <value>
                    <fullName>Opción Preg3-B</fullName>
                </value>
                <value>
                    <fullName>Opción Preg3-C</fullName>
                </value>
                <value>
                    <fullName>Opción Preg3-D</fullName>
                </value>
                <value>
                    <fullName>Opción Preg3-E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregunta_4__c</fullName>
        <label>Pregunta 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opción A-preg4</fullName>
                </value>
                <value>
                    <fullName>Opción B-preg4</fullName>
                </value>
                <value>
                    <fullName>Opción C-preg4</fullName>
                </value>
                <value>
                    <fullName>Opción D-preg4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregunta_5A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pregunta 5A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pregunta_5B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pregunta 5B</label>
        <type>Checkbox</type>
    </fields>
    <label>Encuesta</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>ENC-{00000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas</pluralLabel>
    <recordTypes>
        <fullName>Encuesta_tipo_1</fullName>
        <active>true</active>
        <description>Encuesta tipo 1</description>
        <label>Encuesta tipo 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Encuesta_tipo_2</fullName>
        <active>true</active>
        <description>Encuesta tipo 2</description>
        <label>Encuesta tipo 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Encuesta_tipo_3</fullName>
        <active>true</active>
        <description>Encuesta tipo 3</description>
        <label>Encuesta tipo 3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Encuesta_tipo_4</fullName>
        <active>true</active>
        <description>Encuesta tipo 4</description>
        <label>Encuesta tipo 4</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>